Fix sidebar list space issue - Add extra space only for city list

--- a/BikeWale.UI/css/brand.css
+++ b/BikeWale.UI/css/brand.css
@@ -1339,7 +1339,7 @@
 	margin-bottom: 2px;
 }
 
-.sidebar-bike-list .bike-target-link {
+.sidebar__city-list.sidebar-bike-list .bike-target-link {
 	padding-top: 15px;
 	padding-bottom: 15px;
 }
